# devflow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP_V1.md  go.mod
cmd/devflow/: main.go
internal/app/: app.go  app_test.go  commands.go
internal/config/: config.go  config_test.go
internal/git/: git.go  git_test.go
internal/jira/: jira.go  jira_test.go
internal/models/: ticket.go
internal/providers/github/: github.go  github_test.go
internal/providers/gitlab/: gitlab.go  gitlab_test.go
internal/utils/: branch.go  branch_test.go  colors.go  prompt.go  system.go
src/: errors.rs  main.rs
src/api/: git.rs  github.rs  gitlab.rs  jira.rs  mod.rs
src/config/: settings.rs
src/models/: ticket.rs
