[package]
name = "devflow"
version = "0.1.0"
edition = "2021"
authors = ["Ilia Goginashvili"]
description = "A blazing-fast CLI for automating Jira/Git workflows - stop context switching"
license = "MIT"
repository = "https://github.com/Ilia01/devflow"
readme = "README.md"
keywords = ["jira", "gitlab", "git", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework - handles argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime - needed for API calls
tokio = { version = "1.41", features = ["full"] }

# HTTP client - for Jira/GitLab APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling made easy
anyhow = "1.0"

# Terminal colors
colored = "2.0"

# Config file management
config = "0.14"

# Git operations
git2 = "0.20"

# URL encoding for API paths
urlencoding = "2.1"

# Cross-platform browser opening
open = "5.0"

# Interactive prompts
dialoguer = "0.11"

[dev-dependencies]
# HTTP mocking for tests
mockito = "1.6"
